--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -1,4 +1,5 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+if-shell "uname | grep -q Darwin" "source-file .tmux-macosx" "source-file .tmux-linux"
+
 unbind C-b
 set -g prefix C-a
 
