use ] instead of C-[ for session choosing

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -14,7 +14,7 @@ set -g mode-mouse on
 setw -g mouse-select-window on
 setw -g mouse-select-pane on
 
-bind-key C-[ choose-session
+bind-key ] choose-session
 set -g default-terminal "screen-256color" 
 
 bind-key / resize-pane -D 3
