--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -1,4 +1,4 @@
-if-shell "uname | grep -q Darwin" "source-file .tmux-macosx" "source-file .tmux-linux"
+if-shell "uname | grep -q Darwin" "source-file .tmux-macosx.conf" "source-file .tmux-linux"
 
 unbind C-b
 set -g prefix C-a
