--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -10,9 +10,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key h select-pane -L
 
-set -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
+set -g mouse on
 
 bind-key m choose-session
 set -g default-terminal "screen-256color" 
@@ -24,10 +22,11 @@ bind-key + resize-pane -R 3
 
 # Copy mode
 setw -g mode-keys vi
+bind-key y run-shell "tmux save-buffer - | nc localhost 8377"
 bind [ copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
 bind -t vi-copy Escape cancel
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-pipe "nc localhost 8377"
+bind-key -t vi-copy y copy-pipe "nc localhost 8377"
