--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -26,3 +26,25 @@ bind-key y run-shell "tmux save-buffer - | nc localhost 8377"
 bind [ copy-mode
 unbind p
 bind p paste-buffer
+# bind-key -T vi-copy v begin-selection
+# bind-key -T vi-copy Escape cancel
+# bind-key -T vi-copy Enter copy-pipe "nc localhost 8377"
+# bind-key -T vi-copy y copy-pipe "nc localhost 8377"
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "nc localhost 8377"
+
+# from https://github.com/wincent/wincent/blob/master/roles/dotfiles/files/.tmux.conf
+# Make double and triple click work outside of copy mode (already works inside it with default bindings).
+#bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -X select-word"
+#bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -X select-line"
+
+# Open new/split panes with the path of the current pane.
+unbind c
+bind c new-window -c '#{pane_current_path}'
+unbind %
+bind % split-window -h -c '#{pane_current_path}'
+unbind '"'
+bind '"' split-window -v -c '#{pane_current_path}'
+
+set escape-time 0
+
+set-option -g history-limit 250000
