up history limit

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -11,9 +11,9 @@ bind-key l select-pane -R
 bind-key h select-pane -L
 
 set -g mouse on
+set -g history-limit 500000
 
 bind-key m choose-session
-set -g default-terminal "screen-256color" 
 
 bind-key / resize-pane -D 3
 bind-key - resize-pane -L 3
