--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -12,6 +12,7 @@ bind-key h select-pane -L
 
 set -g mouse on
 set -g history-limit 500000
+set -g default-terminal "tmux-256color" 
 
 bind-key m choose-session
 
