--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -21,6 +21,9 @@ bind-key - resize-pane -L 3
 bind-key * resize-pane -U 3
 bind-key + resize-pane -R 3
 
+set -sa terminal-overrides "Ms==\\E]52;%p1%s;%p2%s\\007"
+
+
 # Copy mode
 setw -g mode-keys vi
 bind-key y run-shell "tmux save-buffer - | nc localhost 8377"
