--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -1,5 +1,7 @@
 if-shell "uname | grep -q Darwin" "source-file .tmux-macosx.conf" ""
 
+set-option -g default-command "${SHELL} -l"
+
 unbind C-b
 set -g prefix C-a
 
