--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -23,7 +23,14 @@ bind-key - resize-pane -L 3
 bind-key * resize-pane -U 3
 bind-key + resize-pane -R 3
 
-set -sa terminal-overrides "Ms==\\E]52;%p1%s;%p2%s\\007"
+# set -sa terminal-overrides "Ms==\\E]52;%p1%s;%p2%s\\007"
+
+set -s set-clipboard external
+set -as terminal-features ',*:clipboard'
+
+set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7"
+set -ag terminal-overrides "xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
+
 
 
 # Copy mode
